# cookiecutter-python

./: README.rst  cookiecutter.json
{{ cookiecutter.package_name }}/: CHANGES.rst  LICENSE.rst  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.package_name }}/docs/: Makefile
{{ cookiecutter.package_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.package_name }}/test/: __init__.py
